# 1brc

./: Cargo.toml
src/: gen-examples.rs
